hide Leaflet attribution; don't open links in iframe

--- a/app/views/hyrax/file_sets/_media_embedded.erb
+++ b/app/views/hyrax/file_sets/_media_embedded.erb
@@ -17,7 +17,8 @@
           map = L.map('image', {
               center: [0, 0],
               crs: L.CRS.Simple,
-              zoom: 0
+              zoom: 0,
+              attributionControl: false
           });
           layer = L.tileLayer.iiif("<%= riiif_url %>", { bestFit: true });
           layer.addTo(map);
