--- a/app/views/layouts/embedded.html.erb
+++ b/app/views/layouts/embedded.html.erb
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
   <head>
+    <!-- Ensure all links open outside the iframe, in a new tab -->
+    <base target="_blank">
     <!-- CSS -->
     <%= stylesheet_link_tag 'embed' %>
     <!-- Javascript -->
