Resolves #1229: Monograph Reindex Button

--- a/app/views/monograph_catalog/_index_epub.html.erb
+++ b/app/views/monograph_catalog/_index_epub.html.erb
@@ -8,7 +8,8 @@
          alt="<%= @monograph_presenter.representative_alt_text %>">
     <% if can? :edit, @monograph_presenter %>
         <%= link_to t('monograph_catalog.index.can_edit'), main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
-    <% end %>
+        <%= link_to t('monograph_catalog.index.reindex'), main_app.monograph_reindex_path(@monograph_presenter.id), method: :patch, class: 'btn btn-primary', id: 'monograph-reindex-button' %>
+  <% end %>
   </div><!-- /.monograph-cover -->
   <div class="col-sm-9 monograph-metadata">
     <h2><%= @monograph_presenter.title %></h2>
