--- a/app/views/hyrax/file_sets/media_display/_video.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_video.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <video id="video"
-       preload="auto"
+       preload="metadata"
        data-able-player
        data-include-transcript="false"
        poster="<%= hyrax.download_path(file_set, file: 'jpeg') %>">
