--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -246,7 +246,7 @@ footer.press {
         margin-top: .9em;
         }
 
-        .external-resource-icon {
+        .file-set-glyphicon {
           font-size: 9em;
           margin-bottom: 10px;
         }
@@ -350,7 +350,7 @@ footer.press {
         padding: 1em;
         text-align: center;
 
-        .external-resource-icon {
+        .file-set-glyphicon {
           font-size: 8em;
         }
 
@@ -411,6 +411,11 @@ footer.press {
   #image {
     height: 540px;
     width: 100% !important;
+  }
+
+  // non-Leaflet Asset page image (PDF thumbnails etc)
+  .asset-page-image {
+    margin: auto;
   }
 
   // WEBKIT MEDIA CONTROLS
@@ -502,6 +507,14 @@ footer.press {
 
   .btn {
     margin-top: 3px;
+  }
+
+  .asset-page-glyphicon {
+    display: block;
+    font-size: 12em;
+    padding-top: 25px;
+    text-align: center;
+    margin-bottom: 20px;
   }
 }
 
