--- a/fulcrum/_includes/head.html
+++ b/fulcrum/_includes/head.html
@@ -43,7 +43,7 @@
   <link type="text/css" rel="stylesheet" href="/css/custom.css">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "http://{{ site.host }}/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ page.url | append: 'feed.xml' | prepend: site.baseurl | prepend: site.url }}">
 
   {% if site.environment == "production" %}
     {% include analytics.html %}
