Resolves #1268 Chapters in the ToC tab of a monograph_catalog page should link to the epub in CSB

--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -1,7 +1,10 @@
+<% epub_url = Rails.application.routes.url_helpers.epub_url(@monograph_presenter.epub_id) %>
+<% epub_dir = @monograph_presenter.epub_presenter.content_dir %>
+
 <% @monograph_presenter.epub_presenter.chapters.each do |chapter| %>
   <div class="row chapter">
     <div class="col-sm-12">
-      <h3><a href="#"><%= chapter.title %></a></h3>
+      <h3><a href="<%= epub_url %>#/<%= epub_dir %>/<%= chapter.href %>"><%= chapter.title %></a></h3>
       <%= chapter.blurb unless chapter.paragraphs.empty? %>
       <hr>
     </div>
