Resolves #1264 Add EPUB navigation slider

--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -79,6 +79,7 @@
       cozy.control.pagePrevious({ region: 'left.sidebar' }).addTo(reader);
       cozy.control.pageNext({ region: 'right.sidebar' }).addTo(reader);
       // cozy.control.pageLast({ region: 'right.sidebar' }).addTo(reader);
+      cozy.control.navigator({ region: 'book.navigator' }).addTo(reader);
 
       // Publisher/copyright widgets
       cozy.control.publicationMetadata({ region: 'bottom.footer' }).addTo(reader);
