--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -151,6 +151,11 @@ footer.press {
 ///////////////////////////////////
 .monograph {
 
+  .sidebar {
+    // In hyrax2 this defaults to grey which we don't want
+    background-color: white;
+  }
+
   div.facets h3 {
     font-size: 1.2em;
   }
