--- a/app/views/shared/_my_actions.html.erb
+++ b/app/views/shared/_my_actions.html.erb
@@ -8,23 +8,15 @@
     <ul class="dropdown-menu">
       <li><%= link_to 'Fulcrum', main_app.fulcrum_path, role: 'menuitem'  %></li>
       <li class="divider"></li>
+      <li><%= link_to 'Dashboard', hyrax.dashboard_path, role: 'menuitem'  %></li>
+      <li class="divider"></li>
       <% show_analytics_link = current_user && current_user.platform_admin? %>
       <% if show_analytics_link %>
         <li><%= link_to 'Analytics', main_app.analytics_path, role: 'menuitem' %></li>
       <% end %>
-      <li><%= link_to 'Admin', hyrax.admin_path, role: 'menuitem'  %></li>
-      <li><%= link_to 'Dashboard', hyrax.dashboard_index_path, role: 'menuitem'  %></li>
       <li class="divider"></li>
 
       <% include_collections_link ||= can?(:create, Collection) %>
-
-      <% if include_collections_link %>
-        <li><%= link_to 'My Collections', search_path_for_my_collections, class: 'my-collections', role: 'menuitem' %></li>
-      <% end %>
-
-      <% if include_collections_link %>
-        <li class="divider"></li>
-      <% end %>
 
       <% show_jobs_link = current_user && current_user.platform_admin? %>
       <%
@@ -45,11 +37,11 @@
       <% end %>
 
       <% if show_embargo_link %>
-        <li><%= link_to 'Embargos', main_app.embargoes_path, role: 'menuitem' %></li>
+        <li><%= link_to 'Embargos', hyrax.embargoes_path, role: 'menuitem' %></li>
       <% end %>
 
       <% if show_lease_link %>
-        <li><%= link_to 'Leases', main_app.leases_path, role: 'menuitem' %></li>
+        <li><%= link_to 'Leases', hyrax.leases_path, role: 'menuitem' %></li>
       <% end %>
 
       <% if show_jobs_link || show_users_link || show_embargo_link || show_lease_link %>
