tweak fonts and padding for helio implementation of csb

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -580,7 +580,11 @@ footer.press {
 	padding: .71em 1em;
 }
 
-.st-modal>article {
+.cozy-modal {
+  padding: 0 !important;
+}
+
+.modal__content {
   font-size: 1em !important;
 }
 
