--- a/app/views/shared/_my_actions.html.erb
+++ b/app/views/shared/_my_actions.html.erb
@@ -8,6 +8,10 @@
     <ul class="dropdown-menu">
       <li><%= link_to 'Fulcrum', main_app.fulcrum_path, role: 'menuitem'  %></li>
       <li class="divider"></li>
+      <% show_analytics_link = current_user && current_user.platform_admin? %>
+      <% if show_analytics_link %>
+        <li><%= link_to 'Analytics', main_app.analytics_path, role: 'menuitem' %></li>
+      <% end %>
       <li><%= link_to 'Admin', hyrax.admin_path, role: 'menuitem'  %></li>
       <li><%= link_to 'Dashboard', hyrax.dashboard_index_path, role: 'menuitem'  %></li>
       <li class="divider"></li>
