move download btn under asset

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -509,6 +509,12 @@ footer.press {
     margin-top: 3px;
   }
 
+  .btn-heliotrope-download {
+    display:block;
+    margin: auto;
+    max-width: 300px;
+  }
+
   .asset-page-glyphicon {
     display: block;
     font-size: 12em;
