--- a/app/views/hyrax/file_sets/_media.html.erb
+++ b/app/views/hyrax/file_sets/_media.html.erb
@@ -31,8 +31,10 @@
       </p>
     <% end %>
     <figcaption><%= @presenter.attribute_to_html(:caption, render_as: :markdown, label: '') %></figcaption>
+    <% if @presenter.allow_download?  %>
+        <%= link_to @presenter.download_button_label, hyrax.download_path(@presenter), target: :_blank, class: 'btn btn-default btn-lg btn-heliotrope-download', data: { turbolinks: false } %>
+    <% end %>
   </figure> <!-- /.image/media -->
-
   <% if @presenter.transcript.present? %>
       <div class="panel panel-default transcript">
         <div class="panel-heading">
