modify button centering method and button width

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -510,9 +510,8 @@ footer.press {
   }
 
   .btn-heliotrope-download {
-    display:block;
-    margin: auto;
-    max-width: 300px;
+    display: inline-block;
+    margin: 1em 0 0;
   }
 
   .asset-page-glyphicon {
