change styles to reenable k/b preferences

--- a/app/assets/stylesheets/embed/embed_styles.scss
+++ b/app/assets/stylesheets/embed/embed_styles.scss
@@ -40,11 +40,6 @@ html {
       -o-transition: all 2s ease;
       transition: all 2s ease;
     }
-    .icon-preferences {
-      // the only useful dialog for embed right now is keyboard (shortcuts), but...
-      // it's too big for the iframe. So just hide the button for now.
-      display: none;
-    }
   }
   // :active here is a first attempt to defeat sticky touch hover behavior
   .able:hover > div:nth-child(3), .able:active > div:nth-child(3) {
@@ -72,8 +67,8 @@ html {
   width: 6%;
   min-width: 60px;
   height: auto;
-  // Able Player uses some extremely high z-indices
-  z-index: 60000;
+  // able div has a z-index of 5000
+  z-index: 5001;
   padding: 3px;
   margin: 0;
   font-size: 11px;
@@ -97,6 +92,16 @@ html {
 .leaflet-embed {
   // same as leaflet map background #ddd
   background: rgba(221, 221, 221, 0.8);
+}
+
+.able-modal-dialog{
+  max-height: 90%;
+  border: none;
+  overflow-y: auto;
+  padding: 0 10px;
+  .modal-button {
+    margin-bottom: 10px;
+  }
 }
 
 figure:hover > div:nth-child(1), figure:active > div:nth-child(1) {
