--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -55,5 +55,6 @@
     <%= content_for?(:body) ? yield(:body) : yield %>
 
     <%= render 'shared/ajax_modal' %>
+    <%= render 'shared/cookie_alert' %>
   </body>
 </html>
