--- a/app/views/hyrax/file_sets/_media_embedded.html.erb
+++ b/app/views/hyrax/file_sets/_media_embedded.html.erb
@@ -50,8 +50,8 @@
              poster="<%= hyrax.download_path(@presenter.id, file: 'jpeg') %>">
         <source src="<%= hyrax.download_path(@presenter.id, file: 'webm') %>" type="video/webm" />
         <source src="<%= hyrax.download_path(@presenter.id, file: 'mp4') %>" type="video/mp4" />
-        <% if @presenter.transcript.present? %>
-            <track kind="captions" src="<%= hyrax.download_path(@presenter.id, file: 'vtt') %>" srclang="en" label="English"  />
+        <% if @presenter.transcript.present? %><%# kind="subtitles" due to https://github.com/mlibrary/heliotrope/issues/1234 %>
+            <track kind="subtitles" src="<%= hyrax.download_path(@presenter.id, file: 'vtt') %>" srclang="en" label="English"  />
         <% end %>
         Your browser does not support the video tag.
       </video>
