Resolves #1362 Better alt text for thumbnails

--- a/app/views/monograph_catalog/_index_gallery_file_set_wrapper.html.erb
+++ b/app/views/monograph_catalog/_index_gallery_file_set_wrapper.html.erb
@@ -6,7 +6,7 @@
       <% tn = render_thumbnail_tag(document, {}, :counter => document_counter_with_offset(document_counter)) %>
       <%= tn.gsub(/<img.*>/, icon_string + '<br/>').html_safe %>
     <% else %>
-      <%= render_thumbnail_tag(document, {}, :counter => document_counter_with_offset(document_counter)) %>
+      <%= render_thumbnail_tag(document, {alt: fs_presenter.alt_text}, :counter => document_counter_with_offset(document_counter)) %>
     <% end %>
     <div class="caption">
       <%= render_document_partials document, blacklight_config.view_config(:gallery).partials, :document_counter => document_counter %>
