--- a/app/views/monograph_catalog/_thumbnail_file_set.html.erb
+++ b/app/views/monograph_catalog/_thumbnail_file_set.html.erb
@@ -1,5 +1,5 @@
 <% fs_presenter = Hyrax::FileSetPresenter.new(document, nil, nil) %>
-<%- if has_thumbnail?(document) && tn = render_thumbnail_tag(document, {}, :counter => document_counter_with_offset(document_counter)) %>
+<%- if has_thumbnail?(document) && tn = render_thumbnail_tag(document, {alt: fs_presenter.alt_text}, :counter => document_counter_with_offset(document_counter)) %>
 <div class="document-thumbnail col-sm-3">
   <% if fs_presenter.use_glyphicon? %>
     <% icon_string = '<span class="' + fs_presenter.glyphicon_type + ' file-set-glyphicon" aria-hidden="true"></span>' %>
