--- a/app/views/hyrax/file_sets/_media_embedded.html.erb
+++ b/app/views/hyrax/file_sets/_media_embedded.html.erb
@@ -2,7 +2,7 @@
   <%# note that the fulcrum-embed-link hover display relies on it being the first child of <figure> %>
   <div class="fulcrum-embed-link<%= ' leaflet-embed' if @presenter.image? %>">
     <%# note embed_fulcrum_logo_title is double-quoted, <base target="_blank"> in embedded.html.erb doesn't work here %>
-    <a href="<%= @presenter.embed_fulcrum_logo_link(request.protocol, request.host_with_port) %>"
+    <a href="<%= @presenter.embed_fulcrum_logo_link %>"
        title='<%= @presenter.embed_fulcrum_logo_title %>'
        target="_blank">
       <%= image_tag "fulcrum-white-50px.png", class: 'logo', alt: 'Fulcrum logo' %>
