--- a/app/views/hyrax/file_sets/_media_embedded.html.erb
+++ b/app/views/hyrax/file_sets/_media_embedded.html.erb
@@ -8,55 +8,5 @@
       <%= image_tag "fulcrum-white-50px.png", class: 'logo', alt: 'Fulcrum logo' %>
     </a>
   </div>
-  <% if @presenter.image? %>
-      <% riiif_url = "/image-service/#{@presenter.id}/info.json" %>
-      <div id="image"></div>
-      <script>
-          var map, layer, timer;
-
-          $(document).ready(function() {
-              // give half a second for resize to take over
-              throttleLeafletMapSetup(500);
-          });
-
-          $(window).resize(function() {
-              throttleLeafletMapSetup(250);
-          });
-
-          function throttleLeafletMapSetup(milliseconds) {
-              clearTimeout (timer);
-              timer = setTimeout(setupLeafletMap, milliseconds);
-          };
-
-          function setupLeafletMap() {
-              if (map != undefined) { map.off(); map.remove(); }
-              map = L.map('image', {
-                  center: [0, 0],
-                  crs: L.CRS.Simple,
-                  zoom: 0,
-                  scrollWheelZoom: false,
-                  attributionControl: false
-              });
-              layer = L.tileLayer.iiif("<%= riiif_url %>", { bestFit: true });
-              layer.addTo(map);
-          };
-      </script>
-  <% elsif @presenter.video? %>
-      <video id="video"
-             preload="metadata"
-             data-able-player
-             data-include-transcript="false"
-             data-allow-fullscreen="false"
-             poster="<%= hyrax.download_path(@presenter.id, file: 'jpeg') %>">
-        <source src="<%= hyrax.download_path(@presenter.id, file: 'webm') %>" type="video/webm" />
-        <source src="<%= hyrax.download_path(@presenter.id, file: 'mp4') %>" type="video/mp4" />
-        <% if @presenter.transcript.present? %><%# kind="subtitles" due to https://github.com/mlibrary/heliotrope/issues/1234 %>
-            <track kind="subtitles" src="<%= hyrax.download_path(@presenter.id, file: 'vtt') %>" srclang="en" label="English"  />
-        <% end %>
-        Your browser does not support the video tag.
-      </video>
-  <% else %>
-      <%# fall back to default, no use case for this yet%>
-      <%= media_display @presenter %>
-  <% end %>
+  <%= render partial: @presenter.heliotrope_media_partial('media_display_embedded'), locals: { file_set: @presenter } %>
 </figure>
