--- a/app/views/monograph_catalog/_thumbnail_list_file_set.html.erb
+++ b/app/views/monograph_catalog/_thumbnail_list_file_set.html.erb
@@ -2,8 +2,7 @@
 <%- if has_thumbnail?(document) && tn = render_thumbnail_tag(document, {alt: fs_presenter.alt_text}, :counter => document_counter_with_offset(document_counter)) %>
 <div class="document-thumbnail col-sm-3">
   <% if fs_presenter.use_glyphicon? %>
-    <% icon_string = '<span class="' + fs_presenter.glyphicon_type + ' file-set-glyphicon" aria-hidden="true"></span>' %>
-    <%= tn.gsub(/<img.*>/, icon_string + '<br/>').html_safe %>
+    <%= tn.gsub(/<img.*>/, fs_presenter.gylphicon + "<br/></a>".html_safe).html_safe %>
     <% if document.external_resource == 'yes' %>
       <a class="external-resource-link" href="<%= document.ext_url_doi_or_handle %>" target="_blank"><span class="glyphicon glyphicon-share" aria-hidden="true"></span> View External Object</a>
     <% end %>
