--- a/app/views/shared/_site_search.html.erb
+++ b/app/views/shared/_site_search.html.erb
@@ -1,6 +1,6 @@
 <% if params['controller'] == 'monograph_catalog' %>
   <% catalog_url = main_app.monograph_catalog_path(params[:id]) %>
-<% elsif params['controller'] == 'hyrax/file_sets' && !@presenter.nil? %>
+<% elsif params['controller'] == 'hyrax/file_sets' && !@presenter.nil? && @presenter.monograph.present? %>
   <% catalog_url = main_app.monograph_catalog_path(@presenter.monograph_id) %>
 <% else %>
   <% catalog_url = main_app.search_catalog_path %>
