--- a/app/views/hyrax/file_sets/_form.html.erb
+++ b/app/views/hyrax/file_sets/_form.html.erb
@@ -1,3 +1,4 @@
+<% flash[:alert] = "This FileSet has no parent monograph. Metadata edits work but return URI errors." if parent.blank? %>
 <%= simple_form_for [main_app, curation_concern],
                     html: { multipart: true },
                     wrapper_mappings: { multifile: :horizontal_file_input } do |f| %>
@@ -51,14 +52,13 @@
       </fieldset>
     </div>
   </div>
-
   <div class="row">
     <div class="col-md-12 form-actions">
       <%= f.submit(
         (curation_concern.persisted? ? "Update Attached File" : %(Attach to #{parent.human_readable_type})),
         class: 'btn btn-primary'
       ) %>
-      <%= link_to 'Cancel', parent_path(parent), class: 'btn btn-link' %>
+      <%= link_to 'Cancel', parent.present? ? parent_path(parent) : Rails.application.routes.url_helpers.hyrax_file_set_path(curation_concern.id), class: 'btn btn-link' %>
     </div>
   </div>
 <% end %>
