When in CSB the fullscreen widget glyph changes if in fullscreen mode or not

--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -73,6 +73,11 @@
                         data: { label: '<i id="fullscreen" class="icon-fullscreen-enter oi" data-glyph="fullscreen-enter" title="Fullscreen Mode" aria-hidden="true"></i>' },
                         onClick: function() {
                             reader.requestFullscreen();
+                            if (!window.screenTop && !window.screenY) {
+                              $('#fullscreen').attr('data-glyph', 'fullscreen-enter');
+                            } else {
+                              $('#fullscreen').attr('data-glyph', 'fullscreen-exit');
+                            }
                         }
                     }).addTo(reader);
       // Reading preferences widget
