add updated navigation slider to e-reader footer

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -611,6 +611,12 @@ footer.press {
   height: 54.4px;
 }
 
+.cozy-container .cozy-panel-navigator {
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+  font-size: .9em;
+}
+
 
 ///////////////////////////////////
 // SITE REQUIRES COOKIES ALERT
